<resources>
    <string name="app_name">TV Show App</string>
    <string name="tv_show_app">TV Show App</string>
    <string name="todo">TODO</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">•</string>
    <string name="website">Website</string>
    <string name="episodes">Episodes</string>
    <string name="watchlist">Watchlist</string>
</resources>